--- a/index.html
+++ b/index.html
@@ -373,22 +373,22 @@
         <div style="display: flex; flex-wrap: wrap; margin-left: 20px;">
             <div class="map-card">
                 <img src="https://wstatic-prod.pubg.com/web/live/main_a91c4dc/img/3ab566e.jpg" alt="Sanhok">
-                <div class="map-title">1 Partida</div>
+                <div class="map-MATCH">1 Partida</div>
                 <div class="map-title">Sanhok</div>
             </div>
             <div class="map-card">
                 <img src="https://wstatic-prod.pubg.com/web/live/main_a91c4dc/img/1bee462.jpg" alt="Vikendi">
-                <div class="map-title">2 Partida</div>
+                <div class="map-MATCH">2 Partida</div>
                 <div class="map-title">Vikendi</div>
             </div>
             <div class="map-card">
                 <img src="https://wstatic-prod.pubg.com/web/live/main_a91c4dc/img/b5c3c7f.jpg" alt="Miramar">
-                <div class="map-title">3 Partida</div>
+                <div class="map-MATCH">3 Partida</div>
                 <div class="map-title">Miramar</div>
             </div>
             <div class="map-card">
                 <img src="https://wstatic-prod.pubg.com/web/live/main_a91c4dc/img/9b5d63e.jpg" alt="Erangel">
-                <div class="map-title">Final 🏆</div>
+                <div class="map-MATCH">Final 🏆</div>
                 <div class="map-title">Erangel</div>
             </div>
         </div>
