--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campeonato Interno de Duplas</title>
+    <title>Campeonato Interno de Duplas VIN</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -366,7 +366,7 @@
 
 <body>
     <div class="header">
-        <h1>Campeonato Interno de Duplas</h1>
+        <h1>Campeonato Interno de Duplas VIN</h1>
         <div class="underline"></div>
         <button class="ajuda-button" onclick="abrirWidget()">Ajude na Premiação! </button> <!-- Botão adicionado -->
         
