--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="date-card">
                 <div class="date-value" style="font-size: 2.5em; font-weight: bold;">9</div>
-                <div class="date-value" style="font-size: 1em; font-weight: bold;">10</div>
+                <div class="date-value" style="font-size: 1em; font-weight: bold;"></div>
                 <div class="date-label" style="font-size: 0.80em; margin-top: 5px;">📅 Novembro</div>
             </div>
             
