--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="date-label" style="font-size: 0.80em; margin-top: 5px;">📅 Novembro</div>
             </div>
             
+            <img src="PUBG-PNG-Image-Transparent-.png" alt="Logo do PUBG" style="width: 450px; height: auto; float: center; margin-left: 10px;">
         </div>
         <div style="display: flex; justify-content: center; align-items: center; padding: 20px; border-radius: 8px;">
             <h2 style="font-size: 2.5em; color: #ffffff; text-align: center; margin: 0;">Duplas</h2>
