--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="PUBG-PNG-Image-Transparent-.png" alt="Logo do PUBG" style="width: 400px; height: auto; float: center; margin-left: 10px;">
         </div>
         <div style="display: flex; justify-content: center; align-items: center; padding: 20px; border-radius: 8px;">
-            <h2 style="font-size: 2.5em; color: #ffffff; text-align: center; margin: 0;">Duplas</h2>
+            <h2 style="font-size: 2.5em; color: #ffffff; text-align: center; margin: 0;">(10) Duplas</h2>
             <img src="pubg.png" alt="Logo do PUBG" style="width: 250px; height: auto; float: center; margin-left: 10px;">
         </div>
         <div class="container" id="equipesContainer">
