--- a/index.html
+++ b/index.html
@@ -19,12 +19,25 @@
                 <div class="date-value" style="font-size: 2.5em; font-weight: bold;">9</div>
                 <div class="date-label" style="font-size: 0.80em; margin-top: 5px;">📅 Novembro</div>
             </div>
-        <button class="ajuda-button" onclick="abrirWidget()">Ajude na Premiação!</button>
+            <button class="ajuda-button" onclick="abrirWidget()" style="margin-left: 10px;">Ajude na Premiação!
+                <br>Arrecadado<br> R$ 40,00</button>
+
+            <!-- Separador para o modo de jogo -->
+            <div class="separador"
+                style="margin-left: 20px; padding: 20px; display: flex; align-items: center; border: 1px solid #ffffff; border-radius: 8px; background-color: rgba(255, 255, 255, 0.1);">
+                <h3 style="font-size: 2em; color: #ffffff; margin: 0; margin-right: 20px;">Modo de jogo: <br> (TPP)</h3>
+                <div style="display: flex; gap: 10px;">
+                    <button
+                        style="padding: 10px 20px; font-size: 1em; background-color: #007BFF; border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Botão
+                        1</button>
+                    <button
+                        style="padding: 10px 20px; font-size: 1em; background-color: #007BFF; border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Botão
+                        2</button>
+                </div>
+            </div>
+        </div>
+
     </div>
-
-
-        <img src="PUBG-PNG-Image-Transparent-.png" alt="Logo do PUBG"
-            style="width: 300px; height: auto; margin-left: 0.5px;">
     </div>
     <div style="display: flex; justify-content: center; flex-wrap: wrap; margin-top: 20px;">
         <div style="display: flex; flex-wrap: wrap; justify-content: center; margin: 20px;">
@@ -52,10 +65,7 @@
     </div>
 
 
-    <!-- Separador para o modo de jogo -->
-    <div class="separador" style="margin: 20px 0; padding: 20px; border: 2px solid #3f2f04; border-radius: 8px;">
-        <h3 style="font-size: 2em; color: #ffffff;">Modo de jogo: (TPP)</h3>
-    </div>
+
 
     <div style="display: flex; justify-content: center; align-items: center; padding: 20px; border-radius: 8px;">
         <h2 style="font-size: 2.5em; color: #ffffff; text-align: center; margin: 0;">(10) Duplas</h2>
@@ -69,7 +79,7 @@
     <div class="overlay" id="overlay"></div>
 
     <div class="widget-container" id="widget">
-        <h2>Valor Arrecadado</h2>
+        <h2>Valor Total da <br> Premiação</h2>
         <div class="valor-arrecadado" id="valorArrecadado">R$ 40,00</div>
         <p class="descricao">Contribua via chave PIX:</p>
         <p class="pix" id="pix-key">(54) 99276-7447</p>
