--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h3 style="font-size: 2em; color: #ffffff; margin: 0; margin-right: 20px;">Modo de jogo: <br> (TPP)</h3>
             <div style="display: flex; gap: 10px;">
                 <button
-                style="padding: 10px 20px; font-size: 1em; background-color: #007BFF; border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Regras do Campeonato</button>
+                style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Regras do Campeonato</button>
                     <button
-                    style="padding: 10px 20px; font-size: 1em; background-color: #007BFF; border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Sistema de Classificação</button>
+                    style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Sistema de Classificação</button>
                 </div>
             </div>
         </div>
