--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="header">
         <h1>Campeonato Interno de Duplas <br> OS VINGADORES <br> E-SPORTS</h1>
         <div class="underline"></div>
-        <div style="display: flex; align-items: center; margin-top: 20px;">
+        <div style="display: flex; align-items: center; margin-top: 50px;">
             <div id="admin"></div>
             <div class="date-card">
                 <div class="date-value" style="font-size: 2.5em; font-weight: bold;">9</div>
                 <div class="date-label" style="font-size: 0.80em; margin-top: 5px;">📅 Novembro</div>
             </div>
-            <button class="ajuda-button" onclick="abrirWidget()" style="margin-left: 10px;">
+            <button class="ajuda-button" onclick="abrirWidget()" style="margin-left: 15px;">
                 Ajude na Premiação! 
                 <br>Arrecadado<br> 
                 <span id="valorArrecadado">R$ 0,00</span>
@@ -27,12 +27,15 @@
             <div class="separador"
             style="margin-left: 20px; padding: 20px; display: flex; align-items: center; border: 1px solid #ffffff; border-radius: 8px; background-color: rgba(255, 255, 255, 0.1);">
             <h3 style="font-size: 2em; color: #ffffff; margin: 0; margin-right: 20px;">Modo de jogo: <br> (TPP)</h3>
-            <div style="display: flex; gap: 10px;">
+            <div style="display: flex; gap: 5px;">
                 <button
-                style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Regras do Campeonato</button>
-                    <button
-                    style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;">Sistema de Classificação</button>
-                </div>
+                    style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;"
+                    onclick="alert('Esta funcionalidade está em desenvolvimento!');">Regras do Campeonato</button>
+                <button
+                    style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;"
+                    onclick="alert('Esta funcionalidade está em desenvolvimento!');">Sistema de Classificação</button>
+            </div>
+            
             </div>
         </div>
     </div>
