--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <button class="ajuda-button" onclick="abrirWidget()" style="margin-left: 15px;">
                 Ajude na Premiação! 
-                <br>Arrecadado<br> 
+                <br>Ja arrecadado.. 💰<br> 
                 <span id="valorArrecadado">R$ 0,00</span>
             </button>
             
