--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@
             style="margin-left: 20px; padding: 20px; display: flex; align-items: center; border: 1px solid #ffffff; border-radius: 8px; background-color: rgba(255, 255, 255, 0.1);">
             <h3 style="font-size: 2em; color: #ffffff; margin: 0; margin-right: 20px;">Modo de jogo: <br> (TPP)</h3>
             <div style="display: flex; gap: 5px;">
-                <button
-                    style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;"
-                    onclick="alert('Esta funcionalidade está em desenvolvimento!');">Regras do Campeonato</button>
+                <button style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;" onclick="document.getElementById('customModal').style.display='block'">Regras do Campeonato de Duplas - PUBG</button>
+                <div id="customModal" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.7);">
+                  <div style="background-color:#000000; margin:10% auto; padding:30px; border:1px solid #444; width:80%; max-width:500px; text-align:center; border-radius:10px; box-shadow: 0px 0px 15px rgba(0,0,0,0.3);">
+                    <span style="color:#444; float:right; font-size:28px; font-weight:bold; cursor:pointer;" onclick="document.getElementById('customModal').style.display='none'">&times;</span>
+                    <h2 style="color:#ff0000;">⚠ AVISO IMPORTANTE ⚠</h2>
+                    <p style="color:#ffffff;">O uso de trapaças (cheat) durante partidas <strong>NÃO</strong> será tolerado!</p>
+                    <p style="color:#ffffff;">Se alguém for pego usando qualquer tipo de cheat, as consequências serão as seguintes:</p>
+                    <p style="color:#ffffff;"><strong>1.</strong> EXPULSÃO IMEDIATA do campeonato.</p>
+                    <p style="color:#ffffff;"><strong>2.</strong> EXCLUSÃO PERMANENTE do clã.</p>
+                    <p style="color:#ffffff;"><strong>3.</strong> DENÚNCIA direta no jogo por TODOS OS MEMBROS do clã.</p>
+                    <p style="color:#ffffff;">Queremos um ambiente justo e competitivo. Jogue limpo e respeite seus companheiros!</p>
+                    <p style="color:#ffffff;">A vitória só vale quando é merecida. 💪🏻</p>
+                  </div>
+                </div>
+                
                 <button
                     style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;"
                     onclick="alert('Esta funcionalidade está em desenvolvimento!');">Sistema de Classificação</button>
