--- a/index.html
+++ b/index.html
@@ -42,11 +42,23 @@
                     <p style="color:#ffffff;">A vitória só vale quando é merecida. 💪🏻</p>
                   </div>
                 </div>
+                <button style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;" onclick="document.getElementById('rankingModal').style.display='block'">Sistema de Classificação</button>
+
+                <div id="rankingModal" style="display:none; position:fixed; z-index:9999; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
+                  <div style="background-color:#000000; margin:10% auto; padding:30px; border:1px solid #444; width:80%; max-width:500px; text-align:center; border-radius:10px; box-shadow: 0px 0px 15px rgba(0,0,0,0.5);">
+                    <span style="color:#ffffff; float:right; font-size:28px; font-weight:bold; cursor:pointer;" onclick="document.getElementById('rankingModal').style.display='none'">&times;</span>
+                    <h2 style="color:#ffcc00;">Sistema de Classificação</h2>
+                    <p style="color:#ffffff;">O sistema de classificação do campeonato de PUBG segue as regras abaixo:</p>
+                    <p style="color:#ffffff;"><strong>1.</strong> O campeonato será realizado em 4 jogos.</p>
+                    <p style="color:#ffffff;"><strong>2.</strong> As partidas serão realizadas em modo normal.</p>
+                    <p style="color:#ffffff;"><strong>3.</strong> As equipes são classificadas com base em sua colocação final e número de eliminações.</p>
+                    <p style="color:#ffffff;"><strong>4.</strong> Pontos são atribuídos da seguinte forma: 1º lugar - 10 pontos, 2º lugar - 8 pontos, etc.</p>
+                    <p style="color:#ffffff;"><strong>5.</strong> Cada eliminação vale 1 ponto.</p>
+                    <p style="color:#ffffff;"><strong>6.</strong> Em caso de empate, o número de eliminações será o critério de desempate.</p>
+                    <p style="color:#ffffff;">Fique atento à tabela de classificação para acompanhar sua dupla!</p>
+                  </div>
+                </div>
                 
-                <button
-                    style="padding: 10px 20px; font-size: 1em; background-color: rgb(146, 112, 0); border: none; color: #ffffff; border-radius: 5px; cursor: pointer;"
-                    onclick="alert('Esta funcionalidade está em desenvolvimento!');">Sistema de Classificação</button>
-            </div>
             
             </div>
         </div>
