--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <div id="admin"></div>
             <div class="date-card">
                 <div class="date-value" style="font-size: 2.5em; font-weight: bold;">10</div>
-                <div class="date-label" style="font-size: 0.80em; margin-top: 5px;">📅 Novembro</div>
+                <div class="date-label" style="font-size: 0.80em; margin-top: 5px;">NOV</div>
             </div>
             <button class="ajuda-button" onclick="abrirWidget()" style="margin-left: 15px;">
-                Ajude na Premiação! 
-                <br>Ja arrecadado.. 💰<br> 
+                Colabore com a Premiação! 
+                <br>🙌<br> 
+                <br>Total enviado!<br> 
                 <span id="valorArrecadado">R$ 0,00</span>
             </button>
             
