--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     
     <div style="display: flex; justify-content: center; align-items: center; padding: 20px; border-radius: 8px;">
-        <h2 style="font-size: 2.5em; color: #ffffff; text-align: center; margin: 0;">(11) Duplas</h2>
+        <h2 style="font-size: 2.5em; color: #ffffff; text-align: center; margin: 0;">(11 + 1 Solo) Duplas</h2>
         <img src="pubg.png" alt="Logo do PUBG" style="width: 250px; height: auto; margin-left: 10px;">
     </div>
     
